Bug 83068 - FORMATTING: Percentage font size problems (in Writer styles) - Czech GUI
Summary: FORMATTING: Percentage font size problems (in Writer styles) - Czech GUI
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.2
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-25 17:28 UTC by Lukas Jelinek
Modified: 2014-08-29 08:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Jelinek 2014-08-25 17:28:22 UTC
When changing the font size in a Writer style it makes troubles of two kinds:

1) Incorrect size when the size chosen from the list.
2) After changing, the list is switched from percentage to points.

Steps to reproduce:

1) Open a style for editting (e.g. right click and Modify...). The style must have percentage font size (such as for Heading 1, Heading 2...).
2) Navigate to the Font card.
3) Choose a new value from the Size list.

Expected result:
- The font size is set the appropriate percentage size.
- The list remains in percentage sizes.

Current result:
- The font size is set as for point size (i.e. as 80pt instead of 80%)
- The list is switched to point sizes.

Important: This occurs only in the Czech GUI settings. The English one works correctly.

My suspicion is that this is caused by the space character which is displayed in the Czech GUI. This is typographically correct but it probably makes these problems.
Comment 1 Petr Valach 2014-08-25 17:44:45 UTC
I have the same czech version too and I have the same problem. I cannot remember if I see the different behavior of LO in this topic. So I support this report and I please to solve.

See our website www.openoffice.cz.
Comment 2 Andras Timar 2014-08-28 15:16:37 UTC
Also in Slovenian, and in any other language that puts space between number and % symbol.
Comment 3 Commit Notification 2014-08-29 08:28:43 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d54b2bd8dcc393bb168386a5c0ec4ce40bb3c6d4

Resolves: fdo#83068 ignore spaces in font-size unit detection



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2014-08-29 08:32:16 UTC
The code in question is very dodgy looking, seems to also look for "pt" at the end of a string to detect points. Anyway, lets keep the changes minimal to the diff introduced by spacing units from the value
Comment 5 Commit Notification 2014-08-29 08:38:00 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a5fedcf7fe56a56475dea484a78971c504e52272&h=libreoffice-4-3

Resolves: fdo#83068 ignore spaces in font-size unit detection


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.