Resolves: fdo#83068 ignore spaces in font-size unit detection

Change-Id: Id9a5c2ee576bd533d8b0a2b4356e319354abbbac